feat(space): implementing use space
