# logic/entities/spaces/drift-mining.js
@@ -1,8 +1,8 @@
 const { StockableGood } = require('../stockable-good.js');
-const { FixedGood } = require('../fixed-good.js');
 const { NEXUS, GOODS } = require('../../constants.js');
 const { Space } = require('./abstract-space.js');
 const { GoodsAction } = require('../../actions/goods-action.js');
+const { MountainTweenTileAction } = require('../../actions/mountain-tween-tile-action.js');
 
 exports.DriftMining = class extends Space {
     constructor() {
@@ -11,8 +11,7 @@ exports.DriftMining = class extends Space {
         const action1 = new GoodsAction();
         action1.goods.push(new StockableGood(GOODS.STONE, 2, 2));
 
-        const action2 = new GoodsAction();
-        action2.goods.push(new FixedGood(GOODS.CAVERN_TUNNEL, 1));
+        const action2 = new MountainTweenTileAction('CT');
 
         this.actions.push(action1);
         this.actions.push(action2);
